feat: add and set up sass

--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -1,4 +1,6 @@
 html {
-    font-size: 10px;
-    scroll-behavior: smooth;
+  font-size: 10px;
+  scroll-behavior: smooth;
 }
+
+/*# sourceMappingURL=style.css.map */
