feat: implement styles of the main page

--- a/shelter/src/sass/abstract/_mixins.scss
+++ b/shelter/src/sass/abstract/_mixins.scss
@@ -1,3 +1,11 @@
+@mixin font ($size, $height, $weight, $style) {
+    font-size: $size;
+    line-height: $height;
+    font-weight: $weight;
+    font-style: $style;
+}
+
+
 @mixin media-tablet {
     @media (max-width: $tablet-width) { @content; }
 }
