--- a/shelter/src/sass/style.scss
+++ b/shelter/src/sass/style.scss
@@ -5,3 +5,15 @@
 
 //base
 @import "base/base";
+@import "base/buttons";
+
+//layouts
+@import "layouts/header";
+
+@import "layouts/not-only";
+@import "layouts/about";
+@import "layouts/our-friends";
+@import "layouts/help";
+@import "layouts/in-addition";
+
+@import "layouts/footer";
