--- a/shelter/src/sass/style.scss
+++ b/shelter/src/sass/style.scss
@@ -17,3 +17,7 @@
 @import "layouts/in-addition";
 
 @import "layouts/footer";
+
+
+@import "layouts/header-pets";
+@import "layouts/our-friends-pets";
