--- a/shelter/src/sass/layouts/_header-pets.scss
+++ b/shelter/src/sass/layouts/_header-pets.scss
@@ -1,4 +1,4 @@
-.header-content {
+.header-pets-content {
     display: flex;
     justify-content: space-between;
     height: 60px;
@@ -6,27 +6,27 @@
     padding: 30px 0 30px 0;
 }
 
-.header-logo {
+.header-pets-logo {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-decoration: none;
     p:first-child {
         font-family: 'Georgia', serif;
-        @include font(3.2rem, 110%, 400, normal);
+        @include font(3.2rem, 3.5rem, 400, normal);
         margin: 0;
-        color: $color-primary;
+        color: $color-dark-l;
         letter-spacing: 0.06em;
     }
     p:last-child {
-        @include font(1.3rem, 115%, 400, normal);
+        @include font(1.3rem, 1.5rem, 400, normal);
         margin: 10px 0 0 0; 
-        color: $color-light-xl;
+        color: $color-dark-3xl;
         letter-spacing: 0.1em;
     }
 }
 
-.header-navigation ul {
+.header-pets-navigation ul {
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -37,22 +37,19 @@
             color: $color-light-s;
             border-bottom: solid 3px $color-primary;
         }
-        &:first-child {
+        &:nth-child(2) {
             border-bottom: solid 3px $color-primary;
         }
-        &:first-child a {
-            color: $color-light-s;
+        &:nth-child(2) a {
+            color: $color-dark-3xl;
             pointer-events: none;
         }
         a {
             @include font(1.5rem, 160%, 400, normal);
             text-decoration: none;
-            color: $color-dark-s;
+            color: $color-dark-l;
             &:hover {
-                color: $color-light-s;
-            }
-            &:active {
-                color: $color-light-s;
+                color: $color-dark-3xl;
             }
         }
     }
