--- a/shelter/src/sass/layouts/_not-only.scss
+++ b/shelter/src/sass/layouts/_not-only.scss
@@ -23,7 +23,7 @@
         padding: 0 40px 0 0;
         margin: 42px 0;
     }
-    button {
+    a {
         margin: 0 0 80px 0;
         width: 207px;
         height: 52px;
