--- a/shelter/src/sass/layouts/our-friends-pets.scss
+++ b/shelter/src/sass/layouts/our-friends-pets.scss
@@ -7,7 +7,11 @@
     flex-direction: column;
     align-items: center;
     margin: 0 40px 0 40px;
-    h2 {
+    h1 {
+        font-family: 'Georgia', serif;
+        @include font(3.5rem, 130%, 400, normal);
+        color: $color-dark-l;
+        letter-spacing: 0.06em;
         margin: 80px 0 45px 0;
         text-align: center;
     }
@@ -32,6 +36,7 @@
     background-color: $color-light-s;
     margin: 15px 0 15px 0;
     border-radius: 9px;
+    @extend %transition;
     p {
         font-family: 'Georgia', serif;
         @include font(2.0rem, 115%, 400, normal);
@@ -43,6 +48,16 @@
         width: 187px;
         height: 52px;
         margin: 0 0 30px 0;
+    }
+    &:hover {
+        transform: scale(1.05);
+        background-color: $color-light-xl;
+        box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+    }
+    &:hover button {
+        background-color: $color-primary-light;
+        border-color: $color-primary-light;
     }
 }
 
@@ -56,17 +71,17 @@
         margin: 0 10px 0 10px;
     }
     button:nth-child(3) {
-        background-color: $color-primary-light;
-        border-color: $color-primary-light;
+        background-color: $color-primary;
+        border-color: $color-primary;
+        &:active {
+            background-color: $color-primary !important;
+            border-color: $color-primary !important;
+        }
     }
     button:nth-child(1), button:nth-child(2) {
         margin: 0 10px 0 10px;
         border-color: $color-dark-s;
         color: $color-dark-s;
         pointer-events: none;
-    }
-    button:hover {
-        background-color: $color-primary-light;
-        border-color: $color-primary-light;
     }
 }
