--- a/shelter/src/sass/style.scss
+++ b/shelter/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import "abstract/fonts";
 @import "abstract/constants";
 @import "abstract/mixins";
+@import "abstract/placeholders";
 
 //base
 @import "base/base";
