--- a/shelter/src/sass/layouts/_in-addition.scss
+++ b/shelter/src/sass/layouts/_in-addition.scss
@@ -39,7 +39,7 @@
             content: " ";
             text-align: left;  
             float: left;
-            background: no-repeat url(../../../img/icons/credit-card.svg); 
+            background: no-repeat url(../../img/icons/credit-card.svg); 
             display: block;  
             height: 23px;  
             width: 45px;
