--- a/shelter/src/sass/layouts/_our-friends.scss
+++ b/shelter/src/sass/layouts/_our-friends.scss
@@ -22,10 +22,10 @@
     display: flex;
     align-items: center;
     > button:first-child {
-        background: center no-repeat url(../../../img/icons/arrow-left.svg);
+        background: center no-repeat url(../../img/icons/arrow-left.svg);
     }
     > button:last-child {
-        background: center no-repeat url(../../../img/icons/arrow-right.svg);
+        background: center no-repeat url(../../img/icons/arrow-right.svg);
     }
 }
 
