--- a/shelter/src/sass/layouts/_not-only.scss
+++ b/shelter/src/sass/layouts/_not-only.scss
@@ -1,5 +1,5 @@
 .not-only {
-    background: url(../../../img/noise_transparent@2x.png), 
+    background: url(../../img/noise_transparent@2x.png), 
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%);
     margin: -120px 0 0 0;
     padding: 180px 0 0 0;
