fix: correct pathes to fonts

--- a/shelter/src/sass/abstract/_fonts.scss
+++ b/shelter/src/sass/abstract/_fonts.scss
@@ -3,9 +3,9 @@
 	font-style: normal;
 	font-weight: 400;
 	src: local('Arial'),
-		url('../../../fonts/arial.woff2') format('woff2'), 
-		url('../../../fonts/arial.woff') format('woff'),
-        url('../../../fonts/arial.ttf') format('ttf');
+		url('../../fonts/arial.woff2') format('woff2'), 
+		url('../../fonts/arial.woff') format('woff'),
+        url('../../fonts/arial.ttf') format('ttf');
 }
 
 @font-face {
@@ -13,9 +13,9 @@
 	font-style: normal;
 	font-weight: 700;
 	src: local('Arial'),
-		url('../../../fonts/arial-bold.woff2') format('woff2'), 
-		url('../../../fonts/arial-bold.woff') format('woff'),
-        url('../../../fonts/arial-bold.ttf') format('ttf');
+		url('../../fonts/arial-bold.woff2') format('woff2'), 
+		url('../../fonts/arial-bold.woff') format('woff'),
+        url('../../fonts/arial-bold.ttf') format('ttf');
 }
 
 @font-face {
@@ -23,9 +23,9 @@
 	font-style: normal;
 	font-weight: 400;
 	src: local('Georgia'),
-		url('../../../fonts/georgia.woff2') format('woff2'), 
-		url('../../../fonts/georgia.woff') format('woff'),
-        url('../../../fonts/georgia.ttf') format('ttf');
+		url('../../fonts/georgia.woff2') format('woff2'), 
+		url('../../fonts/georgia.woff') format('woff'),
+        url('../../fonts/georgia.ttf') format('ttf');
 }
 
 @font-face {
@@ -33,7 +33,7 @@
 	font-style: normal;
 	font-weight: 700;
 	src: local('Georgia'),
-		url('../../../fonts/georgia-bold.woff2') format('woff2'), 
-		url('../../../fonts/georgia-bold.woff') format('woff'),
-        url('../../../fonts/georgia-bold.ttf') format('ttf');
+		url('../../fonts/georgia-bold.woff2') format('woff2'), 
+		url('../../fonts/georgia-bold.woff') format('woff'),
+        url('../../fonts/georgia-bold.ttf') format('ttf');
 }
