--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -2,25 +2,25 @@
   font-family: "Arial";
   font-style: normal;
   font-weight: 400;
-  src: local("Arial"), url("../../../fonts/arial.woff2") format("woff2"), url("../../../fonts/arial.woff") format("woff"), url("../../../fonts/arial.ttf") format("ttf");
+  src: local("Arial"), url("../../fonts/arial.woff2") format("woff2"), url("../../fonts/arial.woff") format("woff"), url("../../fonts/arial.ttf") format("ttf");
 }
 @font-face {
   font-family: "Arial";
   font-style: normal;
   font-weight: 700;
-  src: local("Arial"), url("../../../fonts/arial-bold.woff2") format("woff2"), url("../../../fonts/arial-bold.woff") format("woff"), url("../../../fonts/arial-bold.ttf") format("ttf");
+  src: local("Arial"), url("../../fonts/arial-bold.woff2") format("woff2"), url("../../fonts/arial-bold.woff") format("woff"), url("../../fonts/arial-bold.ttf") format("ttf");
 }
 @font-face {
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
-  src: local("Georgia"), url("../../../fonts/georgia.woff2") format("woff2"), url("../../../fonts/georgia.woff") format("woff"), url("../../../fonts/georgia.ttf") format("ttf");
+  src: local("Georgia"), url("../../fonts/georgia.woff2") format("woff2"), url("../../fonts/georgia.woff") format("woff"), url("../../fonts/georgia.ttf") format("ttf");
 }
 @font-face {
   font-family: "Georgia";
   font-style: normal;
   font-weight: 700;
-  src: local("Georgia"), url("../../../fonts/georgia-bold.woff2") format("woff2"), url("../../../fonts/georgia-bold.woff") format("woff"), url("../../../fonts/georgia-bold.ttf") format("ttf");
+  src: local("Georgia"), url("../../fonts/georgia-bold.woff2") format("woff2"), url("../../fonts/georgia-bold.woff") format("woff"), url("../../fonts/georgia-bold.ttf") format("ttf");
 }
 .pet-card-pets, .header-pets-navigation ul li a, .header-pets-logo, .address p, .contacts p, .in-addition-content a p, .pet-card, .header-navigation ul li a, .header-logo, .button-type-3, .button-type-2, .button-type-1 {
   transition: all 300ms ease-in-out;
