--- a/shelter/src/sass/layouts/_header.scss
+++ b/shelter/src/sass/layouts/_header.scss
@@ -40,7 +40,7 @@
         &:active {
             color: $color-light-s;
             border-bottom: solid 3px $color-primary;
-            transition: none;
+            transition: all 100ms ease-in-out;
         }
         &:first-child {
             border-bottom: solid 3px $color-primary;
